# spillage

./: .gitignore  CLAUDE_FINDINGS.md  CLAUDE_PROPOSAL.md  CODEX_PROPOSAL.md  GEMINI_FINDINGS.md  GEMINI_PROPOSAL.md  PLAN.md  README.md  eval_results.json  eval_results_v2.json  motivation.md  pyproject.toml
cases/: core.jsonl
configs/: mss_default.toml
evals/: __main__.py  analyze_delta_e.py  cases.py  report.py  runner.py  stress_tests.py
mss/: __init__.py  backend.py  cli.py  config.py  decoder.py  eval_harness.py  llama_server_backend.py  presets.py  scoring.py  stress_suites.py
spillage/: __init__.py  backend.py  backend_http.py  backend_mock.py  backend_native.py  cli.py  config.py  sampler.py  scorer.py
tests/: conftest.py  test_backend.py  test_cli.py  test_decoder.py  test_eval_harness.py  test_llama_server_backend.py  test_presets.py  test_sampler.py  test_scorer.py  test_scoring.py  test_stress_suites.py
