[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spillage"
version = "0.1.0"
description = "Min-Spill Search: lookahead re-ranking for reduced hallucination"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
spillage = "spillage.cli:main"
