[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mss"
version = "0.1.0"
description = "Min-Spill Search decoder prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mss = "mss.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
